# point_reader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs  models.rs
tests/: VSE_test.json  cli.rs
