[package]
name = "point_reader"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to read and display VSE points data"
authors = ["Ed Howard"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
colored = "2.0.0"
comfy-table = "6.1.4"
csv = "1.2.1"
dialoguer = "0.10.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
assert_cmd = "2.0.11"

[profile.release]
strip = true
opt-level = "z"
lto = true
